--- a/index_zh.html
+++ b/index_zh.html
@@ -158,7 +158,7 @@
             其他
         </div>
         <div class="content_section_text">
-          <div id="1">
+          <div id="1">  <!--通过局域网或者ZeroTier访问-->
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
@@ -168,6 +168,7 @@
               <a id="router" href="host:8084" rel="nofollow">路由器Web管理</a>
               <a id="ASUSDM" href="host:8085" rel="nofollow">华硕下载大师</a>
               <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
+              <a href="./uptimeStatusRevise/index.html" rel="nofollow">服务器状态监控</a>
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow">由飞鸽代理的页面</a>
@@ -176,15 +177,16 @@
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
             </p>
           </div>
-          <div id="2">
+          <div id="2">  <!--通过内网穿透访问-->
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
               <a href="http://cn-yw-plc-5.openfrp.top:34444" rel="nofollow">MCSManager面板</a>
               <a href="./qbt/" rel="nofollow">qBittorrent网页UI</a>
-              <a href="http://cn-yw-plc-3.openfrp.top:12000/" rel="nofollow">网盘</a>
+              <a href="http://cn-yw-plc-1.openfrp.top:52440/" rel="nofollow">网盘</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
               <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
+              <a href="./uptimeStatusRevise/index.html" rel="nofollow">服务器状态监控</a>
             </p>
             <p>
               <a href="http://guguan123.github.io/guguan/" rel="nofollow">由Github托管的页面</a>
@@ -192,15 +194,16 @@
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
             </p>
           </div>
-          <div id="3">
+          <div id="3">  <!--访问的是云服务器-->
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
               <a href="http://cn-yw-plc-5.openfrp.top:34444" rel="nofollow">MCSManager面板</a>
               <a href="https://guguan.freehk.svipss.top/qbt/" rel="nofollow">qBittorrent网页UI</a>
-              <a href="http://cn-yw-plc-3.openfrp.top:12000/" rel="nofollow">网盘</a>
+              <a href="http://cn-yw-plc-1.openfrp.top:52440/" rel="nofollow">网盘</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
               <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
+              <a href="http://guguan.000.pe/uptime-status/index.html" rel="nofollow">服务器状态监控</a>
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow">由飞鸽代理的页面</a>
@@ -208,13 +211,13 @@
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
             </p>
           </div>
-          <div id="4">
+          <div id="4">  <!--访问的是GitHub Pages-->
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
               <a href="http://cn-yw-plc-5.openfrp.top:34444" rel="nofollow">MCSManager面板</a>
               <a href="https://guguan.freehk.svipss.top/qbt/" rel="nofollow">qBittorrent网页UI</a>
-              <a href="http://cn-yw-plc-3.openfrp.top:12000/" rel="nofollow">网盘</a>
+              <a href="http://cn-yw-plc-1.openfrp.top:52440/" rel="nofollow">网盘</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
               <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
             </p>
