--- a/URL_redirect.html
+++ b/URL_redirect.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!--meta http-equiv="Cache-Control" content="max-age=172800"-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
     <title id="Title">URL redirect</title>
 
@@ -48,10 +47,10 @@
 
     <style type="text/css">
         div {
-            position: fixed;
+            /*position: fixed;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);*/
         }
 
         @media (prefers-color-scheme: dark) {
