--- a/URL_redirect.html
+++ b/URL_redirect.html
@@ -11,7 +11,7 @@
         <script src="https://cdn.bootcdn.net/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
 
-    <script>
+    <script type="text/javascript">
         var language;
 
         function addEventListener() { // 检查语言设置
@@ -85,7 +85,7 @@
         </form>
     </div>
 
-    <script>
+    <script type="text/javascript">
         function Change_Text() {
             if (language!="zh-cn") { //根据language变量修改页面内容的语言
                 document.documentElement.setAttribute("lang", "en");
