--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
   -->
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!--meta http-equiv="Cache-Control" content="max-age=172800" /-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
     <title>Apache2 Ubuntu Default Page: It works</title>
     <!--[if lt IE 9]>
-      <script src="https://cdn.bootcdn.net/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script type="text/javascript" src="https://cdn.bootcdn.net/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
     <script type="text/javascript" src="script.js"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.7.0.js"></script>
+    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.7.0.js"></script>
     <!--从Microsoft CDN获取jQuery-->
     <link rel="stylesheet" href="style.css"/>
   </head>
@@ -183,7 +182,7 @@
             Others
         </div>
         <div class="content_section_text">
-          <div id="1">
+          <div id="a">
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL redirect</a>
               <a href="./file_list.html" rel="nofollow">File List</a>
@@ -201,7 +200,7 @@
               <a href="http://www.i-i.me/507.html" rel="nofollow">Third party HomePage</a>
             </p>
           </div>
-          <div id="2">
+          <div id="b">
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL redirect</a>
               <a href="./file_list.html" rel="nofollow">File List</a>
@@ -217,7 +216,7 @@
               <a href="http://www.i-i.me/507.html" rel="nofollow">Third party HomePage</a>
             </p>
           </div>
-          <div id="3">
+          <div id="c">
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL redirect</a>
               <a href="./file_list.html" rel="nofollow">File List</a>
@@ -233,7 +232,7 @@
               <a href="http://www.i-i.me/507.html" rel="nofollow">Third party HomePage</a>
             </p>
           </div>
-          <div id="4">
+          <div id="d">
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL redirect</a>
               <a href="./file_list.html" rel="nofollow">File List</a>
