--- a/index_zh.html
+++ b/index_zh.html
@@ -7,14 +7,13 @@
   -->
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!--meta http-equiv="Cache-Control" content="max-age=172800" /-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
     <title>Apache2 Ubuntu默认页面：它可以工作</title>
     <!--[if lt IE 9]>
-      <script src="https://cdn.bootcdn.net/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script type="text/javascript" src="https://cdn.bootcdn.net/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
     <script type="text/javascript" src="script.js"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
+    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
     <!--从Microsoft CDN获取jQuery-->
     <link rel="stylesheet" href="style.css"/>
   </head>
@@ -158,7 +157,7 @@
             其他
         </div>
         <div class="content_section_text">
-          <div id="1">  <!--通过局域网或者ZeroTier访问-->
+          <div id="a">  <!--通过局域网或者ZeroTier访问-->
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
@@ -177,7 +176,7 @@
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
             </p>
           </div>
-          <div id="2">  <!--通过内网穿透访问-->
+          <div id="b">  <!--通过内网穿透访问-->
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
@@ -194,7 +193,7 @@
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
             </p>
           </div>
-          <div id="3">  <!--访问的是云服务器-->
+          <div id="c">  <!--访问的是云服务器-->
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
@@ -211,7 +210,7 @@
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
             </p>
           </div>
-          <div id="4">  <!--访问的是GitHub Pages-->
+          <div id="d">  <!--访问的是GitHub Pages-->
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
