--- a/Gaokao_Countdown.html
+++ b/Gaokao_Countdown.html
@@ -33,7 +33,11 @@
         }
 
         .white-half {
-            
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
 
         .white-half .footer {
