--- a/index_zh.html
+++ b/index_zh.html
@@ -172,7 +172,6 @@
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow">由飞鸽代理的页面</a>
               <a href="http://guguan123.github.io/guguan/" rel="nofollow">由Github托管的页面</a>
-              <a href="http://guguan.000.pe/" rel="nofollow">由InfinityFree托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
             </p>
           </div>
@@ -189,7 +188,6 @@
             </p>
             <p>
               <a href="http://guguan123.github.io/guguan/" rel="nofollow">由Github托管的页面</a>
-              <a href="http://guguan.000.pe/index2.html" rel="nofollow">由InfinityFree托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
             </p>
           </div>
@@ -213,12 +211,11 @@
           <div id="d">  <!--访问的是GitHub Pages-->
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
-              <a href="./file_list.html" rel="nofollow">文件目录</a>
+              <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
               <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow">由飞鸽代理的页面</a>
-              <a href="http://guguan.000.pe/index2.html" rel="nofollow">由InfinityFree托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
             </p>
           </div>
