--- a/Gaokao_Countdown.html
+++ b/Gaokao_Countdown.html
@@ -109,7 +109,7 @@
         if (window.location.protocol === "https:") {
             // 当前页面使用 HTTPS 协议
             console.log("当前页面使用 HTTPS 协议");
-            var url = "http://worldtimeapi.org/api/timezone/Asia/Shanghai";
+            var url = "https://worldtimeapi.org/api/timezone/Asia/Shanghai";
         } else {
             // 当前页面不使用 HTTPS 协议
             console.log("当前页面不使用 HTTPS 协议");
