--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <script type="text/javascript" src="https://cdn.bootcdn.net/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
     <script type="text/javascript" src="script.js"></script>
-    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.7.0.js"></script>
     <!--从Microsoft CDN获取jQuery-->
+    <!--<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>-->
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
@@ -196,7 +196,6 @@
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow">Websites proxy by fgnwct.com</a>
               <a href="http://guguan123.github.io/guguan/" rel="nofollow">Pages hosted by Github</a>
-              <a href="http://guguan.000.pe/" rel="nofollow">Pages hosted by InfinityFree</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">Third party HomePage</a>
             </p>
           </div>
@@ -212,7 +211,6 @@
             </p>
             <p>
               <a href="http://guguan123.github.io/guguan/" rel="nofollow">Pages hosted by Github</a>
-              <a href="http://guguan.000.pe/index2.html" rel="nofollow">Pages hosted by InfinityFree</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">Third party HomePage</a>
             </p>
           </div>
@@ -240,7 +238,6 @@
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow">Websites proxy by fgnwct.com</a>
-              <a href="http://guguan.000.pe/index2.html" rel="nofollow">Pages hosted by InfinityFree</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">Third party HomePage</a>
             </p>
           </div>
