--- a/index_zh.html
+++ b/index_zh.html
@@ -13,7 +13,7 @@
       <script type="text/javascript" src="https://cdn.bootcdn.net/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
     <script type="text/javascript" src="script.js"></script>
-    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
+    <!--<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>-->
     <!--从Microsoft CDN获取jQuery-->
     <link rel="stylesheet" href="style.css"/>
   </head>
