--- a/Gaokao_Countdown.html
+++ b/Gaokao_Countdown.html
@@ -227,7 +227,7 @@
                 currentTime = currentTime.getTime();
             }
 
-            TimeVar = TimeVar + 1;
+            TimeVar++;
             console.log("当前时间为：" + new Date(currentTime).toLocaleString());
             return currentTime; // 返回时间戳（单位：毫秒）
         }
