--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow">Websites proxy by fgnwct.com</a>
-              <a href="http://guguan123.github.io/guguan/" rel="nofollow">Pages hosted by Github</a>
+              <a href="http://guguan123.github.io/" rel="nofollow">Pages hosted by Github</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">Third party HomePage</a>
             </p>
           </div>
@@ -210,7 +210,7 @@
               <a href="http://guguan.000.pe/" rel="nofollow">Blog</a>
             </p>
             <p>
-              <a href="http://guguan123.github.io/guguan/" rel="nofollow">Pages hosted by Github</a>
+              <a href="http://guguan123.github.io/" rel="nofollow">Pages hosted by Github</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">Third party HomePage</a>
             </p>
           </div>
@@ -226,7 +226,7 @@
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow">Websites proxy by fgnwct.com</a>
-              <a href="http://guguan123.github.io/guguan/" rel="nofollow">Pages hosted by Github</a>
+              <a href="http://guguan123.github.io/" rel="nofollow">Pages hosted by Github</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">Third party HomePage</a>
             </p>
           </div>
