--- a/index_zh.html
+++ b/index_zh.html
@@ -167,11 +167,11 @@
               <a id="router" href="host:8084" rel="nofollow">路由器Web管理</a>
               <a id="ASUSDM" href="host:8085" rel="nofollow">华硕下载大师</a>
               <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
-              <a href="./uptimeStatusRevise/index.html" rel="nofollow">服务器状态监控</a>
+              <a href="./uptime-status/index.html" rel="nofollow">服务器状态监控</a>
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow">由飞鸽代理的页面</a>
-              <a href="http://guguan123.github.io/guguan/" rel="nofollow">由Github托管的页面</a>
+              <a href="http://guguan123.github.io/" rel="nofollow">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
             </p>
           </div>
@@ -184,10 +184,10 @@
               <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">网盘</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
               <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
-              <a href="./uptimeStatusRevise/index.html" rel="nofollow">服务器状态监控</a>
+              <a href="./uptime-status/index.html" rel="nofollow">服务器状态监控</a>
             </p>
             <p>
-              <a href="http://guguan123.github.io/guguan/" rel="nofollow">由Github托管的页面</a>
+              <a href="http://guguan123.github.io/" rel="nofollow">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
             </p>
           </div>
@@ -200,11 +200,11 @@
               <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">网盘</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
               <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
-              <a href="http://guguan.000.pe/uptime-status/index.html" rel="nofollow">服务器状态监控</a>
+              <a href="http://guguan.000.pe/uptimeStatusRevise/index.html" rel="nofollow">服务器状态监控</a>
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow">由飞鸽代理的页面</a>
-              <a href="http://guguan123.github.io/guguan/" rel="nofollow">由Github托管的页面</a>
+              <a href="http://guguan123.github.io/" rel="nofollow">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
             </p>
           </div>
