--- a/Gaokao_Countdown.html
+++ b/Gaokao_Countdown.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
+<!-- 
+    文件创建日期：2023/8/5
+    GitHub仓库：http://github.com/guguan123/guguan123.github.io/blob/main/Gaokao_Countdown.html
+    原网站链接：http://226000.xyz/ 
+    所有素材都是直接调用原网站的链接
+-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -336,6 +342,9 @@
     </div>
     <div class="container">
         <div class="white-half">
+            <noscript id="noscript">
+                <h1>需要 JavaScript！您必须启用 JavaScript 以确保倒计时正常运行</h1>
+            </noscript>
             <h1 class="Main_text" id="countdownText">
                 距离高考还有
                 <div id="countdown"></div>
