添加流量统计

--- a/index_zh.html
+++ b/index_zh.html
@@ -219,6 +219,7 @@
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
             </p>
           </div>
+          <a href="https://wapmz.com/in/50" class="wapmz"><img src="https://wapmz.com/cn/big/50" alt="wapmz.com"></a>
         </div>
       </div>
     </div>
