--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
               <a href="http://www.i-i.me/507.html" rel="nofollow">Third party HomePage</a>
             </p>
           </div>
+          <a href="https://wapmz.com/in/50" class="wapmz"><img src="https://wapmz.com/cn/big/50" alt="wapmz.com"></a>
         </div>
       </div>
     </div>
