--- a/index_zh.html
+++ b/index_zh.html
@@ -166,13 +166,15 @@
               <a id="Netdisk" href="host:5244" rel="nofollow">网盘</a>
               <a id="router" href="host:8084" rel="nofollow">路由器Web管理</a>
               <a id="ASUSDM" href="host:8085" rel="nofollow">华硕下载大师</a>
-              <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
               <a href="./uptime-status/index.html" rel="nofollow">服务器状态监控</a>
+              <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow">由飞鸽代理的页面</a>
+              <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
               <a href="http://guguan123.github.io/" rel="nofollow">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
+              <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
             </p>
           </div>
           <div id="b">  <!--通过内网穿透访问-->
@@ -183,40 +185,41 @@
               <a href="./qbt/" rel="nofollow">qBittorrent网页UI</a>
               <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">网盘</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
-              <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
               <a href="./uptime-status/index.html" rel="nofollow">服务器状态监控</a>
+              <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
             </p>
             <p>
+              <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
               <a href="http://guguan123.github.io/" rel="nofollow">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
+              <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
             </p>
           </div>
-          <div id="c">  <!--访问的是云服务器-->
+          <div id="c">  <!--访问的是云服务器（废弃）-->
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
-              <a href="http://kr-se-cncn-1.openfrp.top:20000/" rel="nofollow">MCSManager面板</a>
-              <a href="https://guguan.freehk.svipss.top/qbt/" rel="nofollow">qBittorrent网页UI</a>
-              <a href="http://kr-nc-bgp-1.openfrp.top:52440/" rel="nofollow">网盘</a>
               <a href="http://frp-fly.top:58371/" rel="nofollow">华硕下载大师</a>
-              <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
-              <a href="http://guguan.000.pe/uptimeStatusRevise/index.html" rel="nofollow">服务器状态监控</a>
+              <a href="./uptimeStatusRevise/index.html" rel="nofollow">服务器状态监控</a>
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow">由飞鸽代理的页面</a>
+              <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
               <a href="http://guguan123.github.io/" rel="nofollow">由Github托管的页面</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
+              <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
             </p>
           </div>
           <div id="d">  <!--访问的是GitHub Pages-->
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./Gaokao_Countdown.html" rel="nofollow">高考倒计时</a>
-              <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
             </p>
             <p>
               <a href="http://guguan.freehk.svipss.top/" rel="nofollow">由飞鸽代理的页面</a>
+              <a href="http://guguan.000.pe/" rel="nofollow">博客</a>
               <a href="http://www.i-i.me/507.html" rel="nofollow">第三方主页</a>
+              <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
             </p>
           </div>
           <a href="https://wapmz.com/in/51" class="wapmz"><img src="https://wapmz.com/cn/big/51" alt="wapmz.com"></a>
