--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             Others
         </div>
         <div class="content_section_text">
-          <div id="a">
+          <div id="a" style="display:none">
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL redirect</a>
               <a href="./file_list.html" rel="nofollow">File List</a>
@@ -200,7 +200,7 @@
               <a href="http://guguan123.ysepan.com/" rel="nofollow">YongShuo network disk</a>
             </p>
           </div>
-          <div id="b">
+          <div id="b" style="display:none">
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL redirect</a>
               <a href="./file_list.html" rel="nofollow">File List</a>
@@ -216,7 +216,7 @@
               <a href="http://guguan123.ysepan.com/" rel="nofollow">YongShuo network disk</a>
             </p>
           </div>
-          <div id="c">
+          <div id="c" style="display:none">
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL redirect</a>
               <a href="./file_list.html" rel="nofollow">File List</a>
