--- a/index_zh.html
+++ b/index_zh.html
@@ -157,7 +157,7 @@
             其他
         </div>
         <div class="content_section_text">
-          <div id="a">  <!--通过局域网或者ZeroTier访问-->
+          <div id="a" style="display:none">  <!--通过局域网或者ZeroTier访问-->
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
@@ -177,7 +177,7 @@
               <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
             </p>
           </div>
-          <div id="b">  <!--通过内网穿透访问-->
+          <div id="b" style="display:none">  <!--通过内网穿透访问-->
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
@@ -195,7 +195,7 @@
               <a href="http://guguan123.ysepan.com/" rel="nofollow">永硕E盘</a>
             </p>
           </div>
-          <div id="c">  <!--访问的是云服务器（废弃）-->
+          <div id="c" style="display:none">  <!--访问的是云服务器（废弃）-->
             <p>
               <a href="./URL_redirect.html" rel="nofollow">URL重定向</a>
               <a href="./file_list.html" rel="nofollow">文件目录</a>
