--- a/Gaokao_Countdown.html
+++ b/Gaokao_Countdown.html
@@ -218,7 +218,7 @@
             var url = "http://worldtimeapi.org/api/timezone/Asia/Shanghai";
         }
         
-        function getCurrentTime() {// 获取当前时间
+        function getCurrentTime() { // 获取当前时间
             if (TimeVar >= 30) { // 每隔30秒对较一遍在线时间
                 TimeVar = 0;
                 updateData();
@@ -342,12 +342,12 @@
     </div>
     <div class="container">
         <div class="white-half">
-            <noscript id="noscript">
+            <noscript>
                 <h1>需要 JavaScript！您必须启用 JavaScript 以确保倒计时正常运行</h1>
             </noscript>
             <h1 class="Main_text" id="countdownText">
                 距离高考还有
-                <div id="countdown"></div>
+                <div id="countdown">此页面无法在较旧的浏览器下运行</div>
             </h1>
             <p class="pageContent"></p>
             <p class="maxim">吾尝终日而思矣，不如须臾之所学也。吾尝跂而望矣，不如登高之博见也。——《劝学》</p>
