--- a/Gaokao_Countdown.html
+++ b/Gaokao_Countdown.html
@@ -29,7 +29,7 @@
 
         .gray-half {
             /* 设置背景图片 */
-            background-image: url("https://226000.xyz/assets/img/bg.jpg");
+            background-image: url("https://guguan123.github.io/images/bg.jpg");
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
